--- a/JavaScript2/ejercicio 3/index.html
+++ b/JavaScript2/ejercicio 3/index.html
@@ -9,17 +9,9 @@
 </head>
 
 <body>
-    <div class="grid-container">
-        <div class="grid-item nombre">Luis Flores</div>
-        <div class="grid-item email">luis@gmail.com</div>
-        <div class="grid-item materia">Fisica 3</div>
-        <div class="grid-item semana">
-            <select class="semana-elegida">
-                <option value="1">Semana 1</option>
-                <option value="2">Semana 2</option>
-            </select>
-        </div>
-    </div>    
+    <div class="grid-container">        
+    </div>  
+    <button class="btn-confirmar">Confirmar</button>  
     <script src="logics.js"></script>
 </body>
 
